STARCH-827 work in progress, pre-coverage milestone